# cli_app_template

./: README.md  template.toml
{{project_name}}/: .gitignore  Cargo.toml  build.rs
{{project_name}}/cfg/: config.json
{{project_name}}/src/: cli.rs  config.rs  main.rs
