[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
config-file = { version = "0.2.3", features = ["json"] }
lazy_static = "1.4"

[build-dependencies]
vergen = { version = "6", default-features = false, features = ["build", "git"] }
